--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          id="WebApp_ID" version="2.5">
 
-    <display-name>dinPlat</display-name>
+    <display-name>dinplat</display-name>
     
    <!--
 		- Location of the XML file that defines the root application context.
@@ -13,19 +13,33 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	-->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:spring/application-config.xml</param-value>
+        <param-value>
+            /WEB-INF/spring/application-config.xml
+            /WEB-INF/spring/db-config.xml
+        </param-value>
     </context-param>
 
+    <!--
+    	Dispatcher Servlet의 부모 (모든 서블릿에 공통 적용) 
+     -->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
     
-    
+    <listener>
+    	<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+	</listener>	
+	<context-param>
+    	<param-name>log4jConfigLocation</param-name>
+    	<param-value>/WEB-INF/spring/log4j.properties</param-value>
+	</context-param>
+	
+	
     <!--
 		- Servlet that dispatches request to registered handlers (Controller implementations).
 	-->
     <servlet>
-        <servlet-name>dispatcherServlet</servlet-name>
+        <servlet-name>dinplat</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
@@ -35,8 +49,75 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>dispatcherServlet</servlet-name>
+        <servlet-name>dinplat</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
+   
+    <!--
+		[필터]
+    	filter는 DispatcherServlet이 요청을 전달받기 전에 UTF-8로 Encoding한 후 DispatcherServlet으로 전달한다.
+    -->
+	<filter>
+		<filter-name>encodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>encodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<display-name>dinplat</display-name>
+	
+	
+	<!-- 
+		[Session]
+	-->
+	<session-config>
+	    <session-timeout>30</session-timeout> <!-- 분단위 -->
+	</session-config>
+	
+
+
+	<!-- 
+		[Error Page]
+		HTTP 상태 코드와 Exception에 대해 보여주는 에러 Page
+	-->
+	<error-page>
+	    <exception-type>java.lang.NullPointerException</exception-type>
+	    <location>/WEB-INF/views/error/javaException.jsp</location>
+	</error-page>
+	
+	
+	<!-- 
+		[Security]
+	-->
+	<security-constraint>
+		<display-name>Forbidden</display-name>
+		<web-resource-collection>
+		<web-resource-name>Forbidden</web-resource-name>
+			<url-pattern>/*</url-pattern>
+			<!--
+			<http-method>GET</http-method>
+			<http-method>POST</http-method>
+			-->
+			<http-method>PUT</http-method>
+			<http-method>DELETE</http-method>
+			<http-method>TRACE</http-method>
+			<http-method>OPTIONS</http-method>
+			<http-method>CONNECT</http-method>
+			<http-method>HEAD</http-method>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name></role-name>
+		</auth-constraint>
+	</security-constraint>
 </web-app>
